--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -39,7 +39,7 @@ jobs:
             - name: "exec pulumi"
               uses:  pulumi/actions@v3
               with:
-                command: up
+                command: preview
                 stack-name: dev
               env:
                 PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_TOKEN }}
