--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -45,7 +45,7 @@ jobs:
             - name: "exec pulumi"
               uses:  pulumi/actions@v3
               with:
-                command: preview
+                command: up
                 stack-name: dev
               env:
                 PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_TOKEN }}
