--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -37,7 +37,10 @@ jobs:
 
             # pulumi stack initialization
             - name: Initialize Pulumi Stack
-              run: pulumi stack init dev
+              run: |
+                if ! pulumi stack select dev --non-interactive 2>/dev/null; then
+                  pulumi stack init dev
+                fi
               env:
                 PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_TOKEN }}
 
